library/foundation/include/virgil/crypto/foundation/vscf_rsa.h

//
//  Handles implementation details.
//
typedef struct vscf_rsa_t vscf_rsa_t;
//
//  Cast to the 'vscf_impl_t' type.
//
VSCF_PUBLIC vscf_impl_t *
vscf_rsa_impl(vscf_rsa_t *self);
//
//  Copy given implementation context by increasing reference counter.
//
VSCF_PUBLIC vscf_rsa_t *
vscf_rsa_shallow_copy(vscf_rsa_t *self);
//
//  Setup predefined values to the uninitialized class dependencies.
//
VSCF_PUBLIC vscf_status_t
vscf_rsa_setup_defaults(vscf_rsa_t *self) VSCF_NODISCARD;
//
//  Generate new private key.
//  Note, this operation might be slow.
//
VSCF_PUBLIC vscf_impl_t *
vscf_rsa_generate_key(const vscf_rsa_t *self, size_t bitlen, vscf_error_t *error);
//
//  Decrypt given data.
//
VSCF_PUBLIC vscf_status_t
vscf_rsa_decrypt(const vscf_rsa_t *self, const vscf_impl_t *private_key, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can sign data digest with a given key.
//
VSCF_PUBLIC bool
vscf_rsa_can_sign(const vscf_rsa_t *self, const vscf_impl_t *private_key);
//
//  Return length in bytes required to hold signature.
//  Return zero if a given private key can not produce signatures.
//
VSCF_PUBLIC size_t
vscf_rsa_signature_len(const vscf_rsa_t *self, const vscf_impl_t *private_key);
//
//  Sign data digest with a given private key.
//
VSCF_PUBLIC vscf_status_t
vscf_rsa_sign_hash(const vscf_rsa_t *self, const vscf_impl_t *private_key, vscf_alg_id_t hash_id, vsc_data_t digest,
        vsc_buffer_t *signature) VSCF_NODISCARD;
//
//  Check if algorithm can verify data digest with a given key.
//
VSCF_PUBLIC bool
vscf_rsa_can_verify(const vscf_rsa_t *self, const vscf_impl_t *public_key);
//
//  Verify data digest with a given public key and signature.
//
VSCF_PUBLIC bool
vscf_rsa_verify_hash(const vscf_rsa_t *self, const vscf_impl_t *public_key, vscf_alg_id_t hash_id, vsc_data_t digest,
        vsc_data_t signature);