wrappers/python/virgil_crypto_lib/foundation/_c_bridge/_vscf_rsa.py


    def vscf_rsa_decrypt(self, ctx, private_key, data, out):
        """Decrypt given data."""
        vscf_rsa_decrypt = self._lib.vscf_rsa_decrypt
        vscf_rsa_decrypt.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t), vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_rsa_decrypt.restype = c_int
        return vscf_rsa_decrypt(ctx, private_key, data, out)

    def vscf_rsa_can_sign(self, ctx, private_key):
        """Check if algorithm can sign data digest with a given key."""
        vscf_rsa_can_sign = self._lib.vscf_rsa_can_sign
        vscf_rsa_can_sign.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t)]
        vscf_rsa_can_sign.restype = c_bool
        return vscf_rsa_can_sign(ctx, private_key)

    def vscf_rsa_signature_len(self, ctx, private_key):
        """Return length in bytes required to hold signature.
        Return zero if a given private key can not produce signatures."""
        vscf_rsa_signature_len = self._lib.vscf_rsa_signature_len
        vscf_rsa_signature_len.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t)]
        vscf_rsa_signature_len.restype = c_size_t
        return vscf_rsa_signature_len(ctx, private_key)

    def vscf_rsa_sign_hash(self, ctx, private_key, hash_id, digest, signature):
        """Sign data digest with a given private key."""
        vscf_rsa_sign_hash = self._lib.vscf_rsa_sign_hash
        vscf_rsa_sign_hash.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t), c_int, vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_rsa_sign_hash.restype = c_int
        return vscf_rsa_sign_hash(ctx, private_key, hash_id, digest, signature)

    def vscf_rsa_can_verify(self, ctx, public_key):
        """Check if algorithm can verify data digest with a given key."""
        vscf_rsa_can_verify = self._lib.vscf_rsa_can_verify
        vscf_rsa_can_verify.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t)]
        vscf_rsa_can_verify.restype = c_bool
        return vscf_rsa_can_verify(ctx, public_key)

    def vscf_rsa_verify_hash(self, ctx, public_key, hash_id, digest, signature):
        """Verify data digest with a given public key and signature."""
        vscf_rsa_verify_hash = self._lib.vscf_rsa_verify_hash
        vscf_rsa_verify_hash.argtypes = [POINTER(vscf_rsa_t), POINTER(vscf_impl_t), c_int, vsc_data_t, vsc_data_t]
        vscf_rsa_verify_hash.restype = c_bool
        return vscf_rsa_verify_hash(ctx, public_key, hash_id, digest, signature)

    def vscf_rsa_setup_defaults(self, ctx):
        """Setup predefined values to the uninitialized class dependencies."""
        vscf_rsa_setup_defaults = self._lib.vscf_rsa_setup_defaults
        vscf_rsa_setup_defaults.argtypes = [POINTER(vscf_rsa_t)]
        vscf_rsa_setup_defaults.restype = c_int
        return vscf_rsa_setup_defaults(ctx)

    def vscf_rsa_generate_key(self, ctx, bitlen, error):
        """Generate new private key.
        Note, this operation might be slow."""
        vscf_rsa_generate_key = self._lib.vscf_rsa_generate_key
        vscf_rsa_generate_key.argtypes = [POINTER(vscf_rsa_t), c_size_t, POINTER(vscf_error_t)]
        vscf_rsa_generate_key.restype = POINTER(vscf_impl_t)
        return vscf_rsa_generate_key(ctx, bitlen, error)

    def vscf_rsa_shallow_copy(self, ctx):
        vscf_rsa_shallow_copy = self._lib.vscf_rsa_shallow_copy
        vscf_rsa_shallow_copy.argtypes = [POINTER(vscf_rsa_t)]
        vscf_rsa_shallow_copy.restype = POINTER(vscf_rsa_t)
        return vscf_rsa_shallow_copy(ctx)

    def vscf_rsa_impl(self, ctx):
        vscf_rsa_impl = self._lib.vscf_rsa_impl
        vscf_rsa_impl.argtypes = [POINTER(vscf_rsa_t)]
        vscf_rsa_impl.restype = POINTER(vscf_impl_t)
        return vscf_rsa_impl(ctx)
